Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/SFDC_Channel_Budget_Entry__c.object
<CustomObject>
    <description>Stores key information on an approved or rejected budget transaction. The budget entry corresponds to a source request or claim.</description>
    <fields>
        <fullName>Approved_Claim__c</fullName>
        <description>The approved amount of the claim</description>
        <label>Approved Claim</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Request__c</fullName>
        <description>The approved requested amount.</description>
        <label>Approved Request</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <description>The email address of the approver</description>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <description>The user name that recorded the checkbook entry.</description>
        <label>Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Budget__c</fullName>
        <label>Budget</label>
        <referenceTo>SFDC_Channel_Budget__c</referenceTo>
        <relationshipLabel>Approval Audit Trail</relationshipLabel>
        <relationshipName>R00No0000000pcC4EAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Transaction date and time the record was created.</description>
        <label>Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <description>The name of the partner, where applicable, that originatated the transaction.</description>
        <label>Requestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_ID__c</fullName>
        <description>The ID of the record from which this budget entry was created, as a result of a submit, approve, reject etc. action.</description>
        <label>Source Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Name_Nav__c</fullName>
        <description>This is used as a naviagation means to the source record. The formula uses the source record id and name, both of which are persisted as the time of the budget entry being saved, to navigate back to the source record if it still exists.</description>
        <formula>HYPERLINK(Source_Record_ID__c , Source_Record_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Name__c</fullName>
        <description>The source name of the request or claim. This is saved when the budget entry is created.</description>
        <label>Source Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Budget Entry</label>
    <nameField>
        <displayFormat>CBE-{00000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>